--- a/arch/arm/dts/meson-gxbb-odroid-c2.dts
+++ b/arch/arm/dts/meson-gxbb-odroid-c2.dts
@@ -49,6 +49,11 @@
 	chosen {
 		stdout-path = "serial0:115200n8";
 	};
+
+	memory {
+		device_type = "memory";
+		reg = <0x0 0x0 0x0 0x80000000>;
+	};
 };
 
 &uart_AO {
