--- a/configs/odroid-c2_defconfig
+++ b/configs/odroid-c2_defconfig
@@ -12,3 +12,8 @@ CONFIG_OF_CONTROL=y
 # CONFIG_CMD_FPGA is not set
 # CONFIG_CMD_SOURCE is not set
 # CONFIG_CMD_SETEXPR is not set
+CONFIG_MESON_SERIAL=y
+CONFIG_DEBUG_UART_MESON=y
+CONFIG_DEBUG_UART_BASE=0xc81004c0
+CONFIG_DEBUG_UART_ANNOUNCE=y
+CONFIG_DEBUG_UART_SKIP_INIT=y
