arm: add initial support for Amlogic Meson and ODROID-C2
Support the Amlogic Meson GXBaby platform.

Signed-off-by: Beniamino Galvani <b.galvani@gmail.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -452,6 +452,9 @@ config ARCH_KEYSTONE
 	select SUPPORT_SPL
 	select CMD_POWEROFF
 
+config ARCH_MESON
+	bool "Amlogic Meson"
+
 config ARCH_MX7
 	bool "Freescale MX7"
 	select CPU_V7
@@ -761,6 +764,8 @@ source "arch/arm/cpu/armv7/omap5/Kconfig"
 source "arch/arm/mach-orion5x/Kconfig"
 
 source "arch/arm/cpu/armv7/rmobile/Kconfig"
+
+source "arch/arm/mach-meson/Kconfig"
 
 source "arch/arm/mach-rockchip/Kconfig"
 
